fix: bar chart spacing bugs with tick labels

--- a/components/visualizations/BarChart/BarChart.scss
+++ b/components/visualizations/BarChart/BarChart.scss
@@ -13,6 +13,6 @@
   }
 
   &__axisTickLabel text {
-    word-break: break-word;
+    word-break: normal;
   }
 }
